--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "next": "^14.2.2",
     "npm": "^10.5.2",
     "openai": "^4.52.7",
+    "prism-react-renderer": "1.0.2",
     "react": "^18",
     "react-animated-heart": "^0.0.8",
     "react-calendar-heatmap": "^1.9.0",
@@ -72,6 +73,7 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-simple-code-editor": "^0.14.1",
     "react-syntax-highlighter": "^15.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
