--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
@@ -61,6 +62,7 @@
     "js-confetti": "^0.12.0",
     "lucide-react": "^0.363.0",
     "next": "^14.2.2",
+    "next-cloudinary": "^6.12.0",
     "npm": "^10.5.2",
     "openai": "^4.52.7",
     "prism-react-renderer": "1.0.2",
