--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.19.3",
     "@types/uuid": "^10.0.0",
     "@uiw/react-codemirror": "^4.22.2",
@@ -68,6 +69,7 @@
     "prism-react-renderer": "1.0.2",
     "react": "^18",
     "react-animated-heart": "^0.0.8",
+    "react-big-calendar": "^1.14.0",
     "react-calendar-heatmap": "^1.9.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -87,6 +89,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.8.11",
     "@types/react-calendar-heatmap": "^1.6.7",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
