--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "tldraw": "^3.0.2",
     "uuid": "^10.0.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
