--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "courseapp",
-  "version": "0.1.0",
+  "name": "learning platform",
+  "version": "0.85",
   "private": true,
   "scripts": {
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+
+    "deploy:example": "will build and deploy a example version of the app",
+    "deploy:prod": "will build and deploy in time",
+
     "db:update": "npx prisma generate",
-    "db:visualise": "npx prisma studio",
+    "db:visualise": "dotenv -e .env.development npx prisma studio",
+
     "run:dev": "next dev",
-    "run:all": "npm run start db:update && npm run db:visualise && npm run dev &&",
-    "run:no-db-change": "npm run db:visualise && npm run run:dev"
+
+    "setup:create-admin": "dotenv -e .env.development node setup/setup.admin.ts",
+
+    "setup:prune-entire": "dotenv -e .env.development node setup/setup.data.ts all",
+    "setup:prune-users-all": "dotenv -e .env.development node setup/setup.data.ts users all ",
+    "setup:prune-users-work": "dotenv -e .env.development node setup/setup.data.ts users work ",
+    "setup:prune-users-to-tutor": "dotenv -e .env.development node setup/setup.data.ts users tutor",
+    "setup:prune-tags": "dotenv -e .env.development node setup/setup.data.ts tags all"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.5",
@@ -57,6 +68,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.3.21",
     "i": "^0.3.7",
@@ -87,7 +99,8 @@
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
-  "devDependencies": {
+  "devDependencies": {    
+    "@clerk/clerk-sdk-node": "^5.0.42",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-big-calendar": "^1.8.11",
@@ -95,6 +108,8 @@
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.0.1",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
