--- a/package.json
+++ b/package.json
@@ -47,17 +47,20 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.19.3",
     "@types/uuid": "^10.0.0",
     "@uiw/react-codemirror": "^4.22.2",
+    "@xyflow/react": "^12.3.2",
     "axios": "^1.7.6",
     "chalk": "^4.1.2",
     "class-variance-authority": "^0.7.0",
@@ -77,6 +80,7 @@
     "npm": "^10.5.2",
     "openai": "^4.52.7",
     "prism-react-renderer": "1.0.2",
+    "re-resizable": "^6.10.0",
     "react": "^18",
     "react-animated-heart": "^0.0.8",
     "react-big-calendar": "^1.14.0",
