added page content index for concepts + created time utility functions and cleaned a few bugs

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:sessions": "checks that the session feature works correctly"
   },
   "dependencies": {
+    "@calumk/editorjs-codecup": "^1.2.0",
     "@clerk/nextjs": "^5.1.5",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/theme-one-dark": "^6.1.2",
