--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@editorjs/paragraph": "^2.11.5",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
-    "@hookform/resolvers": "^3.4.0",
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -89,11 +89,12 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-editor-js": "^2.1.0",
-    "react-hook-form": "^7.51.4",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0",
     "react-simple-code-editor": "^0.14.1",
     "react-syntax-highlighter": "^15.5.0",
+    "recharts": "^2.13.3",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
