--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learningplatform",
-  "version": "0.86",
+  "version": "0.86:sp1",
   "private": true,
   "scripts": {
     "build": "next build",
