--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.3.21",
+    "googleapis": "^144.0.0",
     "i": "^0.3.7",
     "js-confetti": "^0.12.0",
     "lucide-react": "^0.363.0",
