--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "learningplatform",
-  "version": "0.86:sp1",
+  "version": "0.86:staged",
   "private": true,
   "scripts": {
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "start:dev": "next dev",
     "deploy:example": "will build and deploy a example version of the app",
     "deploy:prod": "will build and deploy in time",
-    "db:update": "npx prisma generate",
+    "db:update": "dotenv -e .env.development npx prisma generate",
+    "db:publish": "dotenv -e .env.development npx prisma db push",
     "db:visualise": "dotenv -e .env.development npx prisma studio",
-    "run:dev": "next dev",
     "setup:create-admin": "dotenv -e .env.development node setup/setup.admin.ts",
     "setup:prune-entire": "dotenv -e .env.development node setup/setup.data.ts entire",
     "setup:prune-users-all": "dotenv -e .env.development node setup/setup.data.ts usersAll ",
     "setup:prune-users-work": "dotenv -e .env.development node setup/setup.data.ts usersWork ",
     "setup:prune-users-to-tutor": "dotenv -e .env.development node setup/setup.data.ts usersM&S",
     "setup:prune-tags": "dotenv -e .env.development node setup/setup.data.ts tagAssociations",
-    "test:services": "checks all services are functioning",
-    "test:sessions": "checks that the session feature works correctly"
+
+    "test:subscription:main": "dotenv -e env.development jest src/db_queries/enrollment/tests/feature.main.test",
+    "test:subscription:util": "dotenv -e env.development jest src/db_queries/enrollment/tests/feature.utils.test"
   },
+  
   "dependencies": {
     "@calumk/editorjs-codecup": "^1.2.0",
     "@clerk/nextjs": "^5.1.5",
@@ -108,6 +111,7 @@
   },
   "devDependencies": {
     "@clerk/clerk-sdk-node": "^5.0.42",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-big-calendar": "^1.8.11",
@@ -119,9 +123,11 @@
     "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5"
   }
 }
